--- a/transporte.html
+++ b/transporte.html
@@ -152,5 +152,7 @@
     </div>
     
     <script src="app.js"></script>
+    <link rel="manifest" href="/manifest.json">
+<script src="install.js"></script>
 </body>
 </html>
