--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>Dashboard - Constructora Ariguani</title>
     <link rel="stylesheet" href="/style.css">
 </head>
@@ -135,5 +135,7 @@
     </div>
     
     <script src="app.js"></script>
+    <link rel="manifest" href="/manifest.json">
+<script src="install.js"></script>
 </body>
 </html>
