--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>Synergy - Login</title>
     <link rel="stylesheet" href="/style.css">
 </head>
@@ -10,8 +11,8 @@
     <div class="login-container">
         <div class="logo-container">
             <div class="logo-placeholder">
-               <img src="Logo.svg">
-            </div>
+                <img src="Logo.svg" alt="Synergy Logo" width="66" height="101">
+              </div>>
             <h1 class="logo-text">Synergy</h1>
         </div>
         
@@ -39,5 +40,7 @@
     </div>
     
     <script src="login.js"></script>
+    <link rel="manifest" href="/manifest.json">
+<script src="install.js"></script>
 </body>
 </html>
