--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>Synergy - Login</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="login-container">
         <div class="logo-container">
             <div class="logo-placeholder">
                 <img src="Logo.svg" alt="Synergy Logo" width="66" height="101">
-              </div>>
+              </div>
             <h1 class="logo-text">Synergy</h1>
         </div>
         
