--- a/opciones.html
+++ b/opciones.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Añadir estos meta tags en el <head> -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Constructora Ariguani">
+<link rel="apple-touch-icon" href="icon-192x192.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>Opciones - Constructora Ariguani</title>
@@ -14,7 +19,7 @@
             <!-- Información del usuario -->
             <div class="user-card">
                 <div class="user-avatar">
-                    <span>FP</span>
+                    <span>CA</span>
                 </div>
                 <div class="user-info">
                     <h2 class="user-name">Cristian Jussep Alarcon Gonzalez</h2>
