--- a/transporte.html
+++ b/transporte.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-title" content="Synergy">
 <link rel="apple-touch-icon" href="logo.png">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>Transporte - Constructora Ariguani</title>
     <link rel="stylesheet" href="style.css">
 </head>
