--- a/transporte.html
+++ b/transporte.html
@@ -27,6 +27,7 @@
                                     <th>Material</th>
                                     <th>Cantidad</th>
                                     <th>Unidad</th>
+                                    <th>Tiempo</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -34,16 +35,19 @@
                                     <td>Arena</td>
                                     <td>120</td>
                                     <td>m3</td>
+                                    <th>5:00</th>
                                 </tr>
                                 <tr>
                                     <td>Grava</td>
                                     <td>85</td>
                                     <td>m3</td>
+                                    <th>1:30</th>
                                 </tr>
                                 <tr>
                                     <td>Cemento</td>
                                     <td>50</td>
                                     <td>ton</td>
+                                    <th>5:12</th>
                                 </tr>
                             </tbody>
                         </table>
