--- a/opciones.html
+++ b/opciones.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="user-info">
                     <h2 class="user-name">Cristian Jussep Alarcon Gonzalez</h2>
-                    <p class="user-role">Rol: admin</p>
+                    <p class="user-role">Rol: Super usuario </p>
                 </div>
             </div>
             
